<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteY="81dp">

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@null"

        android:ems="10"
        android:gravity="bottom"
        android:hint="@string/txtHint"
        android:inputType="textMultiLine"
        android:lines="3"

        android:scrollHorizontally="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar2"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="8dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:text="@string/convert"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        android:background="@drawable/round_corners"

        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/rset"
        app:layout_constraintBaseline_toBaselineOf="@+id/button"
        app:layout_constraintStart_toEndOf="@+id/button" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/play"
        app:layout_constraintBaseline_toBaselineOf="@+id/button"
        app:layout_constraintEnd_toStartOf="@+id/button" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@null"

        android:ems="10"
        android:inputType="none"
        android:lines="3"

        android:scrollHorizontally="false"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_weight="1"
        android:text="@string/light"
        android:textColor="@android:color/black"
        app:layout_constraintBaseline_toBaselineOf="@+id/checkBox2"
        app:layout_constraintEnd_toStartOf="@+id/checkBox2"
        android:layout_marginRight="32dp" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:text="@string/sound"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar2"
        app:layout_constraintEnd_toEndOf="@+id/toolbar2"
        app:layout_constraintStart_toStartOf="@+id/toolbar2"
        app:layout_constraintTop_toTopOf="@+id/toolbar2" />

    <CheckBox
        android:id="@+id/checkBox3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_weight="1"
        android:text="@string/vibrate"
        android:textColor="@android:color/black"
        app:layout_constraintBaseline_toBaselineOf="@+id/checkBox2"
        app:layout_constraintStart_toEndOf="@+id/checkBox2"
        android:layout_marginLeft="32dp" />

    <Button
        android:id="@+id/button4"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/stopButton"
        app:layout_constraintBaseline_toBaselineOf="@+id/button"
        app:layout_constraintStart_toEndOf="@+id/button"
        android:layout_marginLeft="16dp" />


</android.support.constraint.ConstraintLayout>